# plot

./: Cargo.toml  Makefile  index.html  index.js
docs/: index.html  index.js  plot.js  plot_bg.wasm
pkg/: plot.js  plot_bg.wasm
src/: lib.rs  shader.fs  shader.vs
